@@ -1,3 +1,5 @@
+* Added --update-properties option to muninn-pull.
+
 7.0.2 2025-10-10
 ~~~~~~~~~~~~~~~~
 
